hphp/hack/test/typecheck/lambda/variadics/lambda_application_incorrect_types.php.constraint_method_call.exp
ERROR: File "lambda_application_incorrect_types.php", line 17, characters 33-35:
No instance method `foo` in `string` (Typing[4053])
  File "lambda_application_incorrect_types.php", line 20, characters 12-18:
  This is why I think it is an object of type HH\string
  File "string.hhi", line 6, characters 15-20:
  Declaration of `string` is here
ERROR: File "lambda_application_incorrect_types.php", line 29, characters 12-18:
Invalid argument (Typing[4110])
  File "lambda_application_incorrect_types.php", line 27, characters 20-21:
  Expected `D` (variadic argument)
  File "lambda_application_incorrect_types.php", line 29, characters 16-16:
  But got `C`
ERROR: File "lambda_application_incorrect_types.php", line 38, characters 33-35:
You are trying to access the method `foo` but this is an int (Typing[4062])
  File "lambda_application_incorrect_types.php", line 39, characters 39-39:
  Definition is here
